--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
+    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap" rel="stylesheet">
+  
     <!--owl css-->
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
@@ -26,10 +30,66 @@
     </header>
 
     <main>
-    <div class="filme-principal">
+        <div class="filme-principal">
+            <div class="container">
+                    <h3 class="titulo">SPACEM JAM</h3>
+                    <p class="descricao">O superastro do basquete LeBron James se junta à gangue Looney Tunes para derrotar o Goon Squad e salvar seu filho.</p>
+                <div class="botoes">
+                <button role="button" class="botao">
+                    <i class="far fa-play-circle"></i>
+                    ASSISTIR AGORA 
+                </button>
+                <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
+                    MAIS INFORMAÇÕES 
+                </button>
+                </div>
+            </div>
+        </div>
+        </main>
+    
+        <div class="carrossel-filmes">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <img class="box-filme" src="/images/filme1.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme2.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme3.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme4.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme5.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme6.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme7.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme8.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme9.jpg" alt="imagem filme" srcset="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="/images/filme10.jpg" alt="imagem filme" srcset="">
+                </div>
+            </div>
+        </div>
+
+
+
+    <main>
+    <div class="serie-principal">
         <div class="container">
-                <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
+                <h3 class="titulo">VIKINGS</h3>
+                <p class="descricao">Ragnar Lothbrok, um jovem que se considera descendente de Odin, é um guerreiro, fazendeiro e chefe de família.</p>
             <div class="botoes">
             <button role="button" class="botao">
                 <i class="far fa-play-circle"></i>
@@ -44,37 +104,37 @@
     </div>
     </main>
 
-    <div class="carrossel-filmes">
+    <div class="carrossel-series">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-filme" src="/images/mini1.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie1.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini2.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie2.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini3.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie3.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini4.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie4.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini5.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie5.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini6.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie6.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini7.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie7.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini8.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie8.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini9.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie9.jpg" alt="imagem filme" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="/images/mini10.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie10.jpg" alt="imagem filme" srcset="">
             </div>
         </div>
     </div>
