correção do title e logo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     
-    <title>ProfetaFlix</title>
+    <title>PrimeFlix</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">ProfetaFlix</h2>
+            <h2 class="logo">PrimeFlix</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
