--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
     <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Space+Mono&display=swap" rel="stylesheet"> 
   
     <!--owl css-->
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
@@ -21,8 +23,8 @@
             <h2 class="logo">PrimeFlix</h2>
             <nav>
                 <a href="#">Inicio</a>
-                <a href="#">Séries</a>
-                <a href="#">Filmes</a>
+                <a href="#series">Séries</a>
+                <a href="#filmes">Filmes</a>
                 <a href="#">Documentários</a>
                 <a href="#">Ao vivo</a>
             </nav>
@@ -32,7 +34,7 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                    <h3 class="titulo">SPACEM JAM</h3>
+                    <h3 class="titulo" id="filmes">SPACEM JAM</h3>
                     <p class="descricao">O superastro do basquete LeBron James se junta à gangue Looney Tunes para derrotar o Goon Squad e salvar seu filho.</p>
                 <div class="botoes">
                 <button role="button" class="botao">
@@ -54,7 +56,7 @@
                     <img class="box-filme" src="/images/filme1.jpg" alt="imagem filme" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="/images/filme2.jpg" alt="imagem filme" srcset="">
+                    <img class="box-filme" src="/images/filme2.jpg" alt="imagem filme" id="filmes">
                 </div>
                 <div class="item">
                     <img class="box-filme" src="/images/filme3.jpg" alt="imagem filme" srcset="">
@@ -88,7 +90,7 @@
     <main>
     <div class="serie-principal">
         <div class="container">
-                <h3 class="titulo">VIKINGS</h3>
+                <h3 class="titulo" id="series">VIKINGS</h3>
                 <p class="descricao">Ragnar Lothbrok, um jovem que se considera descendente de Odin, é um guerreiro, fazendeiro e chefe de família.</p>
             <div class="botoes">
             <button role="button" class="botao">
@@ -107,7 +109,7 @@
     <div class="carrossel-series">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-series" src="/images/serie1.jpg" alt="imagem filme" srcset="">
+                <img class="box-series" src="/images/serie1.jpg" alt="imagem filme" id="series">
             </div>
             <div class="item">
                 <img class="box-series" src="/images/serie2.jpg" alt="imagem filme" srcset="">
