colocando hover no slide de fotos

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     
-    <title>PrimeFlix</title>
+    <title>GGFlix</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h2 class="logo">PrimeFlix</h2>
+            <h2 class="logo">GGFlix</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#series">Séries</a>
